tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__analyze__contract_analyze_help.snap
---
source: tests/e2e/machine_contract/analyze.rs
expression: stdout
---
Content analysis commands

Usage: obsidian-cli-inspector analyze [OPTIONS] <COMMAND>

Commands:
  bloat    Detect bloated notes and suggest refactoring
  related  Suggest related notes not directly linked
  help     Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
