tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__analyze__contract_analyze_related_help.snap
---
source: tests/e2e/machine_contract/analyze.rs
expression: stdout
---
Suggest related notes not directly linked

Usage: obsidian-cli-inspector analyze related [OPTIONS] <NOTE>

Arguments:
  <NOTE>  Note path or title

Options:
  -l, --limit <LIMIT>    Maximum number of suggestions [default: 10]
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
